--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,14 @@ repositories {
 }
 
 dependencies {
+    // SPRING FRAMEWORK
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    // LOMBOK
+    implementation 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    // APACHE COMMONS
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
 }
 
 test {
